test/files/neg/interop_typetags_arenot_classmanifests.check
interop_typetags_arenot_classmanifests.scala:6: error: implicit error;
!I e: ClassTag[T]
  No ClassManifest available for T.

    println(implicitly[ClassManifest[T]])
                      ^
1 error
